<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionTip"
        android:layout_width="284dp"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="39dp"
        android:text="@string/questionTip"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/question"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTip"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/ok"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:onClick="ok_Click"
        android:text="@string/ok"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/answerTip"
        android:layout_width="285dp"
        android:layout_height="34dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/answerTip"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="290dp"
        android:layout_height="225dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="10"
        android:scrollbars="vertical"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerTip"
        tools:ignore="LabelFor" />
</android.support.constraint.ConstraintLayout>
